new timing routes and readers
